--- a/Kas.html
+++ b/Kas.html
@@ -6,14 +6,15 @@
 		<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;"/>
 		<style type="text/css">
 			body {
-				background-color: #000044;
-				background: url(https://i.imgur.com/mLuhJP1.png) no-repeat;
+				background-color:transparent;
+				cursor: url(https://i.imgur.com/QpftHmt.png), auto;
 				margin: 0px;
 				overflow: hidden;
 			}
 
 			a {
-				color:#0078ff;
+				cursor:url(https://i.imgur.com/YATfaoA.png),auto;
+				
 			}
 		</style>
 	</head>
