--- a/KcdinaF.html
+++ b/KcdinaF.html
@@ -23,7 +23,7 @@
 .disc{
   width: 343px;            
   height: 343px;          
-  background: url(https://i.imgur.com/Uakmx0j.png)center no-repeat;
+  background: url(https://i.imgur.com/bdnlwbX.png)center no-repeat;
   background-size: cover;
   position: absolute;
   z-index: -10;
@@ -2907,7 +2907,7 @@
 </center> 
 <div align="center">
  <div class="player" id="miplayer">
- <div class="a" style="background-image:url(https://i.imgur.com/peWqHCn.png)">
+ <div class="a" style="background-image:url(https://i.imgur.com/3onDymj.png)">
 
  <div id="lunaradio" style="width:430px; height:364px;background: transparent url() bottom / cover no-repeat;">loading...</div>	
  
@@ -2986,7 +2986,7 @@ document.write("" + textosemana[diasemana] + " " + diames + " de " + textomes[me
   fontratio: "0.5",
   radioname: "Radio DINARAMA",
   scroll: "false",
-  coverimage: "https://i.imgur.com/kSbraV3.png",
+  coverimage: "https://i.imgur.com/TSc5ws2.gif",
   usevisualizer: "real",
   coverstyle: "animated",
   visualizertype: "9",
