--- a/KcdinaF.html
+++ b/KcdinaF.html
@@ -23,7 +23,7 @@
 .disc{
   width: 343px;            
   height: 343px;          
-  background: url(https://i.imgur.com/bdnlwbX.png)center no-repeat;
+  background: url(https://i.imgur.com/lBntdQ9.png)center no-repeat;
   background-size: cover;
   position: absolute;
   z-index: -10;
