--- a/Kcdina.html
+++ b/Kcdina.html
@@ -10,29 +10,28 @@
  }
 
  .a {
-	left: 0;
-	top: 0;
-	right: 50%;
-	bottom: 50%;
-	width:420px; 
-	height:364px;
-	background-size: cover;
+  left: 0;
+  top: 0;
+  right: 50%;
+  bottom: 50%;
+  width:420px; 
+  height:364px;
+  background-size: cover;
  }
 
- 
-.disc{
-  width: 353px;            
-  height: 353px;          
-  background: url(https://i.imgur.com/lBntdQ9.png)center no-repeat;
+  .disc{
+  width: 364px;            
+  height: 364px;          
+  background: url(https://i.imgur.com/NB5vB8x.png)center no-repeat;
   background-size: cover;
   position: absolute;
   z-index: -10;
   overflow: hidden;
-  left: 50px;
-  top: 5px;
-   -webkit-animation: spin 0.1s linear infinite;
-    -moz-animation: spin 0.1s linear infinite;
-   animation: spin 0.1s linear infinite;
+  left: 45px;
+  top: 0px;
+    -webkit-animation: spin 6s linear infinite;
+    -moz-animation: spin 6s linear infinite;
+   animation: spin 6s linear infinite;
   z-index: -6;
   
    }
@@ -60,7 +59,7 @@
      font-size: 15px;
      left: 215px;
      top: 20px;
-     color: #ffffff;
+     color: #6a0311;
      width: 236px;
      height: 19px;
      z-index: 16;
@@ -71,7 +70,7 @@
      top: 45px;
      left: 320px;
      width: 43px;
-     color: #ffffff;
+     color: #6a0311;
      font-family: 'Chela One', cursive;
      font-size: 15px;
   }
@@ -823,10 +822,10 @@ null==d?void 0:d))},attrHooks:{type:{set:function(a,b){if(!o.radioValue&&"radio"
             a.appendChild(h);
             d("#" + c + "coverwrapper1").css({
                 position: "absolute",
-                left: "40px",
-                top: "25px",
-                height: "90px",
-                width: "90px",
+                left: "35px",
+                top: "15px",
+                height: "80px",
+                width: "80px",
                 overflow: "hidden",
                 transition: "opacity 1s",
                 opacity: "0.0",
@@ -838,10 +837,10 @@ null==d?void 0:d))},attrHooks:{type:{set:function(a,b){if(!o.radioValue&&"radio"
             a.appendChild(h);
             d("#" + c + "coverwrapper2").css({
                 position: "absolute",
-                left: "40px",
-                top: "25px",
-                height: "90px",
-                width: "90px",
+                left: "35px",
+                top: "15px",
+                height: "80px",
+                width: "80px",
                 overflow: "hidden",
                 transition: "opacity 1s",
                 opacity: "0.0",
@@ -2915,9 +2914,9 @@ null==d?void 0:d))},attrHooks:{type:{set:function(a,b){if(!o.radioValue&&"radio"
 </center> 
 <div align="center">
  <div class="player" id="miplayer">
- <div class="a" style="background-image:url(https://i.imgur.com/3onDymj.png)">
+<div class="a" style="background-image:url(https://i.imgur.com/gUctS20.png)">
 
- <div id="kastroradio" style="width:430px; height:364px;background: transparent url() bottom / cover no-repeat;">loading...</div>	
+ <div id="kastroradio" style="width:420px; height:364px;background: transparent url() bottom / cover no-repeat;">loading...</div>  
  
  <div class="disc">  
 </div>
