--- a/DinaCristalFinal.html
+++ b/DinaCristalFinal.html
@@ -1441,6 +1441,20 @@ URL: "https://cloudstream2034.conectarhosting.com:7023",
 version: "2",
 })
 </script>
-</div>
+<script language="JavaScript" type="text/javascript">
+    function click(){
+    if(event.button==2){
+    alert('player protected');
+    }
+    }
+    document.onmousedown=click
+    //-->
+    </script>
+	<!-- EVITAR CLICK DERECHO-->
+	<script language="Javascript">
+<!-- Begin
+document.oncontextmenu = function(){return false}
+// End -->
+</script>
 </body>
 </html>
