--- a/Kcdina.html
+++ b/Kcdina.html
@@ -3020,5 +3020,19 @@ document.write("" + textosemana[diasemana] + " " + diames + " de " + textomes[me
   autoplay:"true",
     });
 </script>         
-
+<script language="JavaScript" type="text/javascript">
+    function click(){
+    if(event.button==2){
+    alert('player protected');
+    }
+    }
+    document.onmousedown=click
+    //-->
+    </script>
+	<!-- EVITAR CLICK DERECHO-->
+	<script language="Javascript">
+<!-- Begin
+document.oncontextmenu = function(){return false}
+// End -->
+</script>
 </body>
