--- a/KcdinaF.html
+++ b/KcdinaF.html
@@ -2986,7 +2986,7 @@ document.write("" + textosemana[diasemana] + " " + diames + " de " + textomes[me
   googlefont: "Saira+Condensed:wght@100",
   fontratio: "0.5",
   radioname: "Radio DINARAMA",
-  scroll: "false",
+  scroll: "true",
   coverimage: "https://i.imgur.com/TSc5ws2.gif",
   usevisualizer: "real",
   coverstyle: "animated",
@@ -3013,12 +3013,11 @@ document.write("" + textosemana[diasemana] + " " + diames + " de " + textomes[me
   corsproxy: "",
   autoplay:"true",
     });
-</script>         
-<script src="https://ajax.cloudflare.com/cdn-cgi/scripts/7089c43e/cloudflare-static/rocket-loader.min.js" data-cf-settings="3bc5e4e5245e387f3290c38f-|49" defer=""></script>
+</script>
 <script language="JavaScript" type="text/javascript">
     function click(){
     if(event.button==2){
-    alert('player protected');
+    alert('Copyright Protected Player');
     }
     }
     document.onmousedown=click
@@ -3029,5 +3028,6 @@ document.write("" + textosemana[diasemana] + " " + diames + " de " + textomes[me
 <!-- Begin
 document.oncontextmenu = function(){return false}
 // End -->
-</script>
+</script>         
+<script src="https://ajax.cloudflare.com/cdn-cgi/scripts/7089c43e/cloudflare-static/rocket-loader.min.js" data-cf-settings="3bc5e4e5245e387f3290c38f-|49" defer=""></script>
 </body>
