--- a/KcdinaF.html
+++ b/KcdinaF.html
@@ -3029,5 +3029,6 @@ document.write("" + textosemana[diasemana] + " " + diames + " de " + textomes[me
 document.oncontextmenu = function(){return false}
 // End -->
 </script>         
-<script src="https://ajax.cloudflare.com/cdn-cgi/scripts/7089c43e/cloudflare-static/rocket-loader.min.js" data-cf-settings="3bc5e4e5245e387f3290c38f-|49" defer=""></script>
+<script src="https://ajax.cloudflare.com/cdn-cgi/scripts/7089c43e/cloudflare-static/rocket-loader.min.js" data-cf-settings="3bc5e4e5245e387f3290c38f-|49" defer="">
+</script>
 </body>
