--- a/Kcdina.html
+++ b/Kcdina.html
@@ -2992,7 +2992,7 @@ document.write("" + textosemana[diasemana] + " " + diames + " de " + textomes[me
   googlefont: "Saira+Condensed:wght@100",
   fontratio: "0.5",
   radioname: "Radio DINARAMA",
-  scroll: "false",
+  scroll: "true",
   coverimage: "https://i.imgur.com/TSc5ws2.gif",
   usevisualizer: "real",
   coverstyle: "animated",
