--- a/DinaCristalFinal.html
+++ b/DinaCristalFinal.html
@@ -138,19 +138,19 @@
    }
 	
   .Kastrostreaming .album-cover1 {
-	width: 75px;
-	height: 75px;
-	background: url() center no-repeat;
+	width: 320px;
+	height: 350px;
+	background:url() center no-repeat ;
 	background-size: cover;
 	position: absolute;
 	margin: -3px;
-	top: 50px;
-	left: 30px
+	top: 10px;
+	left: 0px
 	border-radius: 4px;
 	-webkit-box-shadow: 4px 6px 30px 0px rgba(0,0,0,0.6);
 	-moz-box-shadow: 4px 6px 30px 0px rgba(0,0,0,0.6);
 	box-shadow: 4px 6px 30px 0px rgba(0,0,0,0.6);
-	z-index: 5;
+	z-index: -11;
 	left: 64px;
 	box-shadow: 0 0 5px #,
    0 0 25px #180df8,
@@ -560,7 +560,7 @@ left: 100%;
 }
 .Kastrostreaming .row-serv {
 	height: 44px;
-	background-color: #3F79F5;     /*=====Para modificar el color de historial=======*/
+	background-color: #747877;     /*=====Para modificar el color de historial=======*/
 	position: relative;
 	margin: 0 22px 9px 22px;	
 	border-radius: 5px;
