--- a/api.vto/index.html
+++ b/api.vto/index.html
@@ -148,7 +148,7 @@ $("#player").lunaradio({
     color3: "#fc5404",
     color4: "#fa225b",
 	itunestoken: "1000lIPN",
-	metadatatechnic: "js/stream-icy-meta.php",
+	metadatatechnic: "stream-icy-meta.php",
 	ownmetadataurl: "",
 	streamurl: "https://stream.zeno.fm/vm2e36xf0k8uv",   /*-Stream de tu Radio-*/
 	streamtype: "radiozeno",
