--- a/api.vto/⚜apiKC⚜.html
+++ b/api.vto/⚜apiKC⚜.html
@@ -10,7 +10,7 @@
  <param name="wmode" value="transparent" />
  <param name="allowscriptaccess" value="always" />
  <param name="scale" value="noscale" />
- <embed src="https://fuendesing.000webhostapp.com/api.vto/index.html"width="350" scale="noscale" height="493" wmode="transparent" />
+ <embed src="https://kastro-59.github.io/Kascres/api.vto/⚜KC⚜.html"width="350" scale="noscale" height="493" wmode="transparent" />
  </object>
 <div/>
 </body>
