--- a/api.kas.fm/index1.html
+++ b/api.kas.fm/index1.html
@@ -121,7 +121,7 @@ window.setInterval("Horario()",1000);
   coverstyle: "animated",
   visualizertype: "9",
   itunestoken: "1000lIPN",
-  metadatatechnic: "index.php",
+  metadatatechnic: "fallback",
   ownmetadataurl: "",
   streamurl: "https://stream.zeno.fm/emertvc73mruv", 
   streamtype: "radiojar", 
