--- a/api.kas.fm/index1.html
+++ b/api.kas.fm/index1.html
@@ -121,8 +121,8 @@ window.setInterval("Horario()",1000);
   coverstyle: "animated",
   visualizertype: "9",
   itunestoken: "1000lIPN",
-  metadatatechnic: "fallback",
-  ownmetadataurl: "",
+  metadatatechnic: "stream-icy-meta",
+  ownmetadataurl: "corsproxy",
   streamurl: "https://stream.zeno.fm/emertvc73mruv", 
   streamtype: "radiojar", 
   icecastmountpoint: "/radio.mp3",
@@ -139,7 +139,7 @@ window.setInterval("Horario()",1000);
   volume: "50",
   debug: "false",
   usestreamcorsproxy: "false", 
-  corsproxy: "",
+  corsproxy: "https://api.streamafrica.net/zeno/index.php?z=",
   autoplay:"true",
     });
 </script>         
